--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </div>
             <div class="input-box">
                 <input type="tel" name="mobile" placeholder="Mobile Number">
-                <input type="text" name="subject" placeholder="Email Subject">
+                <input type="text" name="subject" placeholder="Inquiry Title">
             </div>
             <textarea name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
             <input type="submit" value="Send Message" class="btn">
