--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
 
             <div class="cta-buttons">
-                <a href="https://drive.google.com/file/d/1_gcTGAyFlz4ndiHndUN2f2ANxxs43oAV/view?usp=drive_link"
+                <a href="https://drive.google.com/file/d/1-EI-5qUhgWn_niou4wWsmv5e4JzzycX1/view?usp=sharing"
                     class="btn" download>Download CV</a>
                 <a href="#contact" class="btn">Let's Connect</a>
 
