Added resume PDF and updated index

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
             </div>
 
             <div class="cta-buttons">
-                <a href="/img/Rohit_ResumeX.pdf" class="btn" download>Download CV</a>
+                <a href="img/Rohit_ResumeX.pdf" class="btn" download>Download CV</a>
+
                 <a href="#contact" class="btn">Let's Connect</a>
 
 
