Update Code Simple To React

--- a/index.html
+++ b/index.html
@@ -1,229 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rohit Kumar - Portfolio</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-
-
-</head>
-
-<body>
-    <!-- Header Section Code -->
-    <header class="header">
-        <a href="#home" class="logo">Rohit Kumar</a>
-        <i class='bx bx-menu' id="menu-icon"></i>
-        <nav class="navbar">
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#testimonial">Testimonial</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
-
-    <!-- Home Section Code -->
-    <section class="home" id="home"> <!-- Fixed: Changed "Home" to "home" to match href -->
-        <div class="home-img">
-            <img src="img/Rohit_pic.png" alt="Profile Image">
-        </div>
-        <div class="home-content">
-            <h3>Hello & Welcome!</h3>
-            <h1>I'm Rohit Kumar</h1>
-            <h3><span class="multiple-text">Software Developer</span></h3>
-
-            <p>
-                I specialize in crafting efficient, scalable, and user-centric digital solutions.
-                With solid expertise in <strong>Java, Web Development</strong>, and <strong>Backend
-                    Development</strong>,
-                I help startups, businesses, and individuals turn ideas into high-performing products.
-                From intuitive frontends to powerful backend systems — I build with precision, purpose, and performance
-                in mind.
-                <br><br>
-                Let’s collaborate and bring your next project to life!
-            </p>
-
-            <div class="social-media">
-                <a href="https://www.linkedin.com/in/itsrohitsingh24/" target="_blank" aria-label="LinkedIn"><i
-                        class='bx bxl-linkedin'></i></a>
-                <a href="https://github.com/rsingh241020" target="_blank" aria-label="GitHub"><i
-                        class='bx bxl-github'></i></a>
-                <a href="https://x.com/rsingh241020?t=WqJiyQ4sclCOmvHZA0OwgQ&s=09" target="_blank"
-                    aria-label="Twitter"><i class='bx bxl-twitter'></i></a>
-                <a href="https://www.instagram.com/its_rsingh24?igsh=MXFsZDA2dzdtM3lqYQ==" target="_blank"
-                    aria-label="Instagram"><i class='bx bxl-instagram'></i></a>
-            </div>
-
-            <div class="cta-buttons">
-                <a href="img/Rohit_Resume.pdf" class="btn" download>Download CV</a>
-
-                <a href="#contact" class="btn">Let's Connect</a>
-
-
-            </div>
-        </div>
-
-
-    </section>
-
-    <!-- About Section -->
-    <section class="about" id="about">
-        <div class="about-content">
-            <h2 class="heading">What I <span>Do</span></h2>
-            <h3>I'm a <span>Software Engineer</span></h3>
-            <p>
-                I am a passionate software engineer with experience in building web and backend applications. I enjoy
-                solving complex problems and creating efficient, scalable solutions that help businesses grow.
-            </p>
-            <p class="more-text" style="display:none;">
-                My expertise includes Java and modern web technologies. I focus on clean code, best practices, and
-                continuous learning. Outside work, I contribute to open source projects and enjoy exploring new
-                technologies to keep myself updated in this fast-changing industry.
-            </p>
-            <a href="#" class="btn" id="read-more-btn">Read more</a>
-        </div>
-        <div class="about-img">
-            <img src="img/Rohit_pic.png" alt="About Image">
-        </div>
-    </section>
-
-    <!-- Services Section -->
-    <section class="services" id="services">
-        <h2 class="heading">My <span>Services</span></h2>
-        <div class="services-container">
-            <div class="services-box">
-                <i class="bx bx-code"></i>
-                <h3>Web Development</h3>
-                <p>I build responsive and dynamic websites using modern technologies like HTML, CSS, JavaScript, and
-                    frameworks such as Angular to deliver user-friendly web applications.</p>
-                <div class="more-text" style="display:none;">
-                    My approach emphasizes clean code and maintainability, ensuring long-term performance and ease of
-                    scaling.
-                </div>
-                <a href="#" class="btn read-more-btn">Read More</a>
-            </div>
-
-            <div class="services-box">
-                <i class="bx bx-mobile-alt"></i>
-                <h3>App Development</h3>
-                <p>Creating mobile apps for Android and iOS with smooth UI/UX and high performance using Flutter and
-                    React Native.</p>
-                <div class="more-text" style="display:none;">
-                    I ensure app security, backend integration, and regular updates to deliver reliable, user-friendly
-                    apps for startups or full products.
-                </div>
-
-                <a href="#" class="btn read-more-btn">Read More</a>
-            </div>
-
-            <div class="services-box">
-                <i class="bx bxl-android"></i>
-                <h3>Java Development</h3>
-                <p>Skilled in building backend systems, desktop apps, and Android apps using Java and Spring Boot.</p>
-                <div class="more-text" style="display:none;">
-                    I focus on microservices, REST APIs, and cloud deployment to deliver secure, efficient, and scalable
-                    solutions.
-                </div>
-
-                <a href="#" class="btn read-more-btn">Read More</a>
-            </div>
-        </div>
-    </section>
-
-
-
-    <!-- Testimonial Section -->
-    <section class="testimonial" id="testimonial">
-        <div class="testimonial-box">
-            <h2 class="heading">Testimonial</h2>
-            <div class="wrapper">
-                <div class="testimonial-item">
-                    <img src="img/Abhay.png" alt="Abhay Singh">
-                    <h2>Abhay Singh</h2>
-                    <div class="rating">
-                        <i class="bx bxs-star"></i>
-                        <i class="bx bxs-star"></i>
-                        <i class="bx bxs-star"></i>
-                        <i class="bx bxs-star"></i>
-                        <i class="bx bxs-star"></i>
-                    </div>
-                    <p>
-                        Rohit built our "AK Career Solution" website with great skill and professionalism. His expertise
-                        and creativity made the project a success. Highly recommended for web development.
-                    </p>
-                </div>
-
-                <div class="testimonial-item">
-                    <img src="img/Ashish.png" alt="Ashish Kumar">
-                    <h2>Ashish Kumar</h2>
-                    <div class="rating">
-                        <i class="bx bxs-star"></i>
-                        <i class="bx bxs-star"></i>
-                        <i class="bx bxs-star"></i>
-                        <i class="bx bxs-star"></i>
-                        <i class="bx bxs-star"></i>
-                    </div>
-                    <p>Working with Rohit was smooth and efficient. His technical skills and attention to detail
-                        impressed me. He delivered a high-quality website that perfectly met our engineering team's
-                        needs.</p>
-                </div>
-
-                <div class="testimonial-item">
-                    <img src="img/Rahul.png" alt="Dr. Rahul">
-                    <h2>Dr. Rahul</h2>
-                    <div class="rating">
-                        <i class="bx bxs-star"></i>
-                        <i class="bx bxs-star"></i>
-                        <i class="bx bxs-star"></i>
-                        <i class="bx bxs-star"></i>
-                        <i class="bx bxs-star"></i>
-                    </div>
-                    <p>Rohit created our website with great professionalism and care. His ability to understand our
-                        vision and translate it into a clean, functional design was outstanding. I highly recommend his
-                        work.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section class="contact" id="contact">
-        <h2 class="heading">Contact <span>Me</span></h2>
-        <form id="contact-form">
-            <div class="input-box">
-                <input type="text" name="fullname" placeholder="Full Name" required>
-                <input type="email" name="email" placeholder="Email Address" required>
-            </div>
-            <div class="input-box">
-                <input type="tel" name="mobile" placeholder="Mobile Number">
-                <input type="text" name="subject" placeholder="Inquiry Title">
-            </div>
-            <textarea name="message" cols="30" rows="10" placeholder="Your Message" required></textarea>
-            <input type="submit" value="Send Message" class="btn">
-        </form>
-    </section>
-
-    <!-- Footer Section -->
-    <footer class="footer">
-        <div class="footer-text">
-            <p>Copyright &copy; <span id="year"></span> by Rohit Kumar | All Rights Reserved.</p>
-        </div>
-        <div class="footer-iconTop">
-            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
-        </div>
-    </footer>
-
-    <!-- Scripts -->
-    <script src="https://cdn.emailjs.com/sdk/3.2/email.min.js"></script>
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <script src="script.js"></script>
-
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>rohit.kumar</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
